--- a/topic_list.html
+++ b/topic_list.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -8,7 +9,7 @@
 </head>
 
 <body>
-{# <div id="tbTop"> {{ log_in_out }} </div> #}
+<div id="tbTop"> {{ log_in_out }} </div>
 <table>
 <tbody>
 <tr>
@@ -25,7 +26,9 @@
 		{{ forum.sidebar }}
 	</td>
 	<td class="contents">
-		<form method="get" id="searchForm" action="http://google.com/search">
+		<form method="get" action="http://google.com/search">
+			<input type="hidden" name="IncludeBlogs" value="1">
+			<input type="hidden" name="as_sitesearch" value="{{ siteurl }}">
 			<div class="searchBox">
 				<table border="0" cellpadding="0" cellspacing="0">
 				<tbody>
@@ -33,10 +36,6 @@
 						<td><label for="query">Search</label><br> </td>
 					</tr>
 					<tr>
-						<td>
-								<input type="hidden" name="IncludeBlogs" value="1">
-								<input type="hidden" name="as_sitesearch" value="{{ siteurl }}">
-						</td>
 						<td><input name="q" id="search" value="" type="text"></td>
 						<td><input class="button" value="Go" type="submit">&nbsp;</td>
 					</tr>
