change feed to Atom format; properly format message bodies; output feed in utf-8, not utf8; more egoistical footer

--- a/404.html
+++ b/404.html
@@ -9,6 +9,8 @@
 <p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
 <p>The page {{ url }} cannot be found. Go <a href="/">to index.</a></p>
 <hr>
-<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
+<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> 
+(<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>,
+created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a>)</center>
 </body>
 </html>
