--- a/forum_list.html
+++ b/forum_list.html
@@ -25,7 +25,10 @@
 	{% if not isadmin %}
 		<p>Log in as admin to create new forums or manage existing forums.</p>
 	{% endif %}
-	<hr>
-	<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
+
+<hr>
+<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> 
+(<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>,
+created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a>)</center>
 </body>
 </html>
