--- a/manage_forums.html
+++ b/manage_forums.html
@@ -91,6 +91,8 @@
 </tbody>
 </table>
 <hr>
-<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>)</center>
+<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> 
+(<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>,
+created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a>)</center>
 </body>
 </html>
