--- a/manage_forums.html
+++ b/manage_forums.html
@@ -61,6 +61,10 @@
 						<td><input type="edit" size="60" maxlength="256" name="tagline" value="{{ prevtagline|escape }}"></input></td>
 					</tr>
 					<tr>
+						<td valign="top">Analytics code</td>
+						<td><input type="edit" size="60" maxlength="256" name="analyticscode" value="{{ prevanalyticscode|escape }}"></input></td>
+					</tr>
+					<tr>
 						<td valign="top">Import secret</td>
 						<td><input type="edit" size="60" maxlength="256" name="importsecret" value="{{ previmportsecret|escape }}"></input></td>
 					</tr>
@@ -82,6 +86,8 @@
 			<p><b>Url</b> is part of the forum url. Should be short and a valid url.</p>
 			<p><b>Title</b> is what we show at the top of the forum.</p>
 			<p><b>Tagline</b> is shown in smaller font, under title. HTML allowed (e.g. for links).</p>
+			<p><b>Analytics code</b> is Googl Analytics code. If given, key pages will include Google Analytics
+					JavaScript with this code</p>
 			<p><b>Import secret</b> protects bulk topic import interface. 
 						See <a href="http://blog.kowalczyk.info/software/fofou">docs</a> for more information</p>
 			<p><b>Sidebar</b> is displayed in the left column. HTML allowed.</p>
@@ -94,5 +100,6 @@
 <center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> 
 (<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>,
 created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a>)</center>
+<br>
 </body>
 </html>
