--- a/skins/default/forum_list.html
+++ b/skins/default/forum_list.html
@@ -2,8 +2,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>List of forums</title>
-	<link href="/fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
+	<link href="{{ skinurl }}fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="{{ skinurl }}fofou.js" type="text/javascript"></script>
 </head>
 
 <body>
