--- a/skins/default/manage_forums.html
+++ b/skins/default/manage_forums.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>Create a forum</title>
-	<link href="/fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
+	<link href="{{ skinurl }}fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="{{ skinurl }}fofou.js" type="text/javascript"></script>
 </head>
 <body>
 <table>
