--- a/skins/default/post.html
+++ b/skins/default/post.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>{% firstof forum.title forum.url %}</title>
-	<link href="/fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
+	<link href="{{ skinurl }}fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="{{ skinurl }}fofou.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 		<div>
 			<h1><a href="{{ siteroot }}" class="green">{% firstof forum.title forum.url %}</a></h1>
 			<p>{{ forum.tagline }}</p>
-			<a href="{{ siteroot }}rss" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
+			<a href="{{ siteroot }}rss" title="RSS feed"><img src="/img/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 		</div>
 	</td>
 </tr>
