--- a/skins/default/topic_list.html
+++ b/skins/default/topic_list.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>{% firstof forum.title forum.url %}</title>
-	<link href="/fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/fofou.js" type="text/javascript"></script>
+	<link href="{{ skinurl }}fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="{{ skinurl }}fofou.js" type="text/javascript"></script>
 	<link type="application/rss+xml" rel="alternate" title="Discussion Group" href="{{ siteroot }}rss">
 </head>
 
@@ -18,7 +18,7 @@
 			<h1><a href="{{ siteroot }}" class="green">{% firstof forum.title forum.url %}</a></h1>
 			<p>{{ forum.tagline }}</p>
 		</div>
-		<a href="{{ siteroot }}rss" title="RSS feed"><img src="/graphics/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
+		<a href="{{ siteroot }}rss" title="RSS feed"><img src="/img/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 	</td>
 </tr>
 <tr>
@@ -66,9 +66,9 @@
 		</div>
 		{% endif %}
 		<div class="buttons">
-		<a accesskey="n" href="{{ siteroot }}post"><img src="/graphics/new.gif" alt="New topic" border="0" height="14" width="13"> <u>N</u>ew topic</a>
+		<a accesskey="n" href="{{ siteroot }}post"><img src="/img/new.gif" alt="New topic" border="0" height="14" width="13"> <u>N</u>ew topic</a>
 		{% if new_from %}
-			<a accesskey="t" href="{{ siteroot }}?from={{ new_from}}"><img src="/graphics/archive.gif" alt="Older topics" border="0" height="14" width="13">Older <u>t</u>opics</a>
+			<a accesskey="t" href="{{ siteroot }}?from={{ new_from}}"><img src="/img/archive.gif" alt="Older topics" border="0" height="14" width="13">Older <u>t</u>opics</a>
 		{% endif %}
 		</div>
 	</td>
