--- a/forum_list.html
+++ b/forum_list.html
@@ -2,29 +2,30 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>List of forums</title>
-	<link href="{{ skinurl }}fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="{{ skinurl }}fofou.js" type="text/javascript"></script>
+	<link href="/skins/default/fofou.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="/skins/default/fofou.js" type="text/javascript"></script>
 </head>
 
 <body>
   <div id="tbTop"> {{ log_in_out }} </div>
 	<p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
 
-	{% if forums %}
-		<p>Available forums:
-			<ul>
-				{% for f in forums %}
-				<li> <a href="/{{ f.url }}"> {% firstof f.title f.url %}</a></li>
-				{% endfor %}
-			</ul>
-		</p>
-	{% else %}
-		<p>There are no forums created yet.</p>
-	{% endif %}
+		{% if forums %}
+			<p>Available forums:
+				<ul>
+					{% for f in forums %}
+					<li> <a href="/{{ f.url }}"> {% firstof f.title f.url %}</a></li>
+					{% endfor %}
+				</ul>
+			</p>
+		{% else %}
+			<p>There are no forums created yet.</p>
+		{% endif %}
 
-	{% if not isadmin %}
-		<p>Log in as admin to create new forums or manage existing forums.</p>
-	{% endif %}
+		{% if not isadmin %}
+			<p>Log in as admin to create new forums or manage existing forums.</p>
+		{% endif %}
+	</div>
 
 <hr>
 <center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> 
