--- a/forum_list.html
+++ b/forum_list.html
@@ -2,8 +2,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>List of forums</title>
-	<link href="/skins/default/fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/skins/default/fofou.js" type="text/javascript"></script>
+	<link href="/static/default.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="/static/default.js" type="text/javascript"></script>
 </head>
 
 <body>
