--- a/skins/default/topic_list.html
+++ b/skins/default/topic_list.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>{% firstof forum.title forum.url %}</title>
-	<link href="{{ skinurl }}fofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="{{ skinurl }}fofou.js" type="text/javascript"></script>
+	<link href="/static/default.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="/static/default.js" type="text/javascript"></script>
 	<link type="application/rss+xml" rel="alternate" title="Discussion Group" href="{{ siteroot }}rss">
 </head>
 
