--- a/manage_forums.html
+++ b/manage_forums.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
 	<title>Create a forum</title>
-	<link href="/static/defaultfofou.css" rel="stylesheet" type="text/css">
-	<script language="javascript" src="/static/defaultfofou.js" type="text/javascript"></script>
+	<link href="/static/default.css" rel="stylesheet" type="text/css">
+	<script language="javascript" src="/static/default.js" type="text/javascript"></script>
 </head>
 <body>
 <script>
