for attribute of label needs to refer to other element's id

--- a/skins/default/topic_list.html
+++ b/skins/default/topic_list.html
@@ -33,7 +33,7 @@
 				<table border="0" cellpadding="0" cellspacing="0">
 				<tbody>
 					<tr>
-						<td><label for="query">Search</label><br> </td>
+						<td><label for="search">Search</label><br> </td>
 					</tr>
 					<tr>
 						<td><input name="q" id="search" value="" type="text"></td>
