firstof template statement doesn't seem to support non-ascii strings so don't use it in the template (should fix problem reported at http://forums.fofou.org/fofou/topic?id=109328)

--- a/manage_forums.html
+++ b/manage_forums.html
@@ -32,7 +32,7 @@ function onSidebarFieldChange() {
 		<td colspan="2" class="header">
 			<div>
 				<h1><a href="" class="green" id="titleId">{% firstof forum.title "Title." %}</a></h1>
-				<p id="taglineId">{% firstof forum.tagline "Tagline." %}</p>
+				<p id="taglineId">{{ forum.tagline }}</p>
 			</div>
 		</td>
 	</tr>
