--- a/skins/default/post.html
+++ b/skins/default/post.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title>{% firstof forum.title forum.url %}</title>
+	<title>{{ forum.title_or_url }}</title>
 	<link href="/static/default.css" rel="stylesheet" type="text/css">
 	<script language="javascript" src="/static/default.js" type="text/javascript"></script>
 </head>
@@ -14,7 +14,7 @@
 <tr>
 	<td colspan="2" class="header">
 		<div>
-			<h1><a href="{{ siteroot }}" class="green">{% firstof forum.title forum.url %}</a></h1>
+			<h1><a href="{{ siteroot }}" class="green">{{ forum.title_or_url }}</a></h1>
 			<p>{{ forum.tagline }}</p>
 			<a href="{{ siteroot }}rss" title="RSS feed"><img src="/img/rss.gif" alt="RSS feed" align="right" valign="middle" border="0" height="14" width="36"></a><br />
 		</div>
