--- a/go/tmpl/main.html
+++ b/go/tmpl/main.html
@@ -2,19 +2,18 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-	<title>Create a forum</title>
+	<title>Fofou - forums for you</title>
 	<link href="/s/default.css" rel="stylesheet" type="text/css">
 	<script language="javascript" src="/s/default.js" type="text/javascript"></script>
 </head>
 <body>
-<p>Welcome to <b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>!</p>
 
 <p>
 	{{ if len .Forums }}
 	Forums:
 	<ul>
 		{{ range .Forums }}
-		<li> <a href="{{ .SiteUrl }}">{{ .Title }}</a>
+		<li> <a href="/{{ .ForumUrl }}">{{ .Title }}</a>
 		{{ end }}
 	</ul>
 	{{ else }}
