--- a/go/tmpl/forum.html
+++ b/go/tmpl/forum.html
@@ -25,7 +25,7 @@
 </tr>
 <tr>
 	<td class="sidebar">
-		{{ .Sidebar }}
+		{{ .SidebarHtml }}
 	</td>
 	<td class="contents">
 		<div class="topics">
