--- a/go/tmpl/main.html
+++ b/go/tmpl/main.html
@@ -22,9 +22,8 @@
 </p>
 
 <hr>
-<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a> 
-(<b><font color="blue">Fo</font></b>rums <b><font color="blue">Fo</font></b>r Yo<b><font color="blue">u</font></b>,
-created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a>)</center>
+<center>Powered by <a href="http://blog.kowalczyk.info/software/fofou">fofou</a>,
+created by <a href="http://blog.kowalczyk.info">Krzysztof Kowalczyk</a></center>
 <br>
 
 {{ if .AnalyticsCode }}
